Still learning GSAP animation...

--- a/views/public_page.hbs
+++ b/views/public_page.hbs
@@ -1,9 +1,3 @@
-<?php
-
-session_start();
-
-?>
-
 <!doctype html>
 
 <html lang="en">
@@ -418,8 +412,30 @@ session_start();
 				/* display: none; */
 			}
 
+			.text-overlay {
+				/* Rectangle: */
+				opacity: 1;
+				background: none;
+				z-index: 1000;
+				/* display: none; */
+			}
+
+			.text-overlay p{
+				/* Save.: */
+				font-family: Avenir-Black;
+				font-size: 61px;
+				color: #FFFFFF;
+				letter-spacing: 0.08px;
+				padding-left: 20px;
+				padding-top: 30px;
+			}
+
 			.opened-menu {
 				/* display: none; */
+			}
+
+			svg {
+				cursor: pointer;
 			}
 
 
@@ -433,14 +449,21 @@ session_start();
 		<!-- DARK OVERLAY -->
 
 		<div class="dark-overlay position-absolute">
-
 		</div>
+
+		<!-- TEXT OVERLAY -->
+
+
 
 		<!-- PICTURE CONTAINER -->
 
 		<div class="container-fluid mainPage py-3 d-flex justify-content-center">
 
 				<div class="col-lg-8 col-md-10 col-12 order-md-1 order-2 mx-0 p-0">
+
+					<div class="text-overlay position-absolute">
+						<p></p>
+					</div>
 
 					<div class="img-block">
 
@@ -514,9 +537,9 @@ session_start();
 
 			<div class="opened-menu">
 
-				<div class="open-menu-btn position-absolute" style="right: 21px; bottom: 21px; z-index: 99">
+				<div class="open-menu-btn position-absolute" style="right: 21px; bottom: 21px; z-index: 99" scale="0">
 
-					<svg width="50px" height="50px" viewBox="0 0 50 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<svg data-name="Close Menu." width="50px" height="50px" viewBox="0 0 50 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<desc>Created with Sketch.</desc>
 					<defs>
 					<circle id="path-2" cx="18" cy="18" r="18"></circle>
@@ -542,7 +565,7 @@ session_start();
 
 				<div class="home-btn position-absolute" style="right: 95px; bottom: 20px; z-index: 13">
 
-					<svg width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<svg data-name="Home." width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
 							<desc>Created with Sketch.</desc>
 							<defs>
@@ -572,7 +595,7 @@ session_start();
 				<div class="download-btn position-absolute" style="right: 70px; bottom: 70px; z-index: 13">
 
 
-					<svg width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<svg data-name="Download Image." width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
 							<desc>Created with Sketch.</desc>
 							<defs>
@@ -602,7 +625,7 @@ session_start();
 				<div class="text-btn position-absolute" style="right: 20px; bottom: 95px; z-index: 13">
 
 
-					<svg width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<svg data-name="Text Position." width="64px" height="64px" viewBox="0 0 64 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
 							<desc>Created with Sketch.</desc>
 							<defs>
@@ -1106,18 +1129,32 @@ session_start();
 			var tl = new TimelineLite()
 
 			$('.menu-btn').on('click', () => {
-				tl.to('.menu-btn', 0, {opacity: 0.01, display:'none', ease:Power2.easeInOut})
+				tl.to('.menu-btn', 0.1, {scale: 0, ease:Power2.easeInOut, transformOrigin:"50% 50%"})
+					.to('.open-menu-btn', 1, {scale: 1, ease:Power2.easeInOut, transformOrigin:"50% 50%"})
 					.to('.dark-overlay', 0.1, {display: 'block', ease:Power2.easeInOut})
-					.to('.opened-menu', 0.3, {display: 'block', ease:Power2.easeInOut})
+					// .to('.opened-menu', 0.3, {display: 'block', ease:Power2.easeInOut})
 			});
 
 			$('svg').on('mouseenter mouseleave', function() {
 
-				console.log(
-					$(this).find('use:eq(1)').attr('fill'),
-					$(this).find('path').attr('fill') ||
-					$(this).find('polygon').attr('stroke')
-				);
+				let presentColor = {
+					circle: $(this).find('use:eq(1)').attr('fill'),
+					stroke: $(this).find('path').attr('fill') || $(this).find('polygon').attr('stroke')
+				};
+
+				if ($(this).attr('data-name') === 'Close Menu.') {
+					$('.text-overlay>p').html($(this).attr('data-name'));
+					return console.log('close hovering');
+				}
+
+				$('.text-overlay>p').html($(this).attr('data-name'));
+				// tl.to($(this).find('use:eq(1)'), 0.1, {fill: presentColor.stroke, ease:Power2.easeInOut, transformOrigin:"50% 50%"});
+				// tl.to($(this).find('path'), 0.1, {fill: presentColor.circle, ease:Power2.easeInOut, transformOrigin:"50% 50%"});
+				// tl.to($(this).find('polygon'), 0.1, {fill: presentColor.circle, ease:Power2.easeInOut, transformOrigin:"50% 50%"});
+				$(this).find('use:eq(1)').attr('fill', presentColor.stroke);
+				$(this).find('path').attr('fill', presentColor.circle);
+				$(this).find('polygon').attr('stroke', presentColor.circle);
+
 
 			})
 
